# ubuntu-connect

backend/: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
backend/.pydeps/hypothesis-6.123.2.dist-info/: RECORD
backend/.pydeps/pytest-8.3.4.dist-info/: RECORD
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/ai/: __init__.py  moderation_service.py  scam_detector.py
backend/app/integrations/: __init__.py  openai_client.py  sms_gateway.py
backend/app/models/: __init__.py  base.py  message.py  notification_failure.py  otp_code.py  report.py  trust_reason.py  user.py
backend/app/repositories/: __init__.py  base.py  dependencies.py  message_repository.py  notification_failure_repository.py  otp_repository.py  report_repository.py  trust_reason_repository.py  (+1 more)
backend/tests/: test_ai_timeout_fallback.py  test_auth.py  test_config_validation.py  test_duplicate_phone_property.py  test_error_envelope.py  test_jwt_expiry_property.py  test_login_gating_property.py  test_login_missing_credential_property.py  test_models.py  test_moderation_label_property.py  test_notification_retry_property.py  test_otp_service.py  test_profile.py  test_protected_endpoint_token_rejection_property.py  test_registration_defaults_property.py  test_registration_validation_property.py  test_repositories.py  test_scaffold.py  test_scam_score_bounded_property.py  test_schemas.py  test_sms_gateway_integration.py  test_sms_truncation_property.py  test_trust_engine.py  test_unhandled_exception_property.py  test_validation_rejection_property.py
(+31 files in other folders)
