[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ubuntu-connect-backend"
version = "0.1.0"
description = "AI-powered trust platform for safe social networking across Africa."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "uvicorn[standard]==0.34.0",
    "SQLAlchemy==2.0.36",
    "psycopg[binary]==3.2.3",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.20",
    "httpx==0.28.1",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "hypothesis==6.123.2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests", "app"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
